--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>exercise</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <link rel="stylesheet" href="./css/stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <!-- header start -->
@@ -17,7 +17,7 @@
             </h1>
 
             <details>
-                <summary class="fa-regular fa-bars"></summary>
+                <summary class="fa-solid fa-bars"></summary>
                 <ul>
                    <li><a href="#">home</a></li>
                    <li><a href="#">services</a></li>
@@ -35,7 +35,7 @@
 
         <section>
             <h2>
-                Best idea for your business
+                Best idea for your Business
             </h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae optio, a aut voluptate totam soluta molestias odio, aliquam saepe nesciunt nulla distinctio praesentium tenetur velit.
@@ -51,9 +51,9 @@
             <article>
                 <h2>best services</h2>
                 <aside>
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                    <h6></h6>
+                    <h6></h6>
+                    <h6></h6>
                 </aside>
             </article>
 
@@ -115,18 +115,16 @@
             </article>
         </section>
         <!-- testimonials end -->
-        <section class="jonathan">
-            <aside>
-                <i class="fa-brands fa-twitter"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis atque magni delectus officiis ipsam ea corporis nulla? Nobis, voluptate fugiat.</p>
-                <span>Jonathan Deo</span>
-            </aside>
-        </section>
     
         <section class="contact">
-            <aside>
+            <article>
                 <h2>Contact</h2>
-            </aside>
+                <aside>
+                    <h6></h6>
+                    <h6></h6>
+                    <h6></h6>
+                </aside>
+            </article>
     
             <form action="">
                 <label for="name">Name</label>
